# property-price-modelling

./: .gitignore  README.md  pyproject.toml
data/01_raw/: scrapping_data_concat.csv
data/02_intermediate/: data_shp_processed  scrapping_data_concat.csv
data/03_primary/: features_selected.json  features_test_metrics.json
data/04_model/: best_model_params.json  best_params.json  model_tunned.joblib
data/04_model/encoders/: categorical_imputer_encoder.joblib  clean_column_names_encoder.joblib  encoders_orders.csv  numerical_imputer_encoder.joblib
data/04_model/model/: actual_estimator.joblib
notebooks/: n00_concatenate_census_data.ipynb  n01_api_read.ipynb  n02_models_tests.ipynb  n02_outliers_treat.ipynb  n03_feature_selection.ipynb  n03_outliers_treat.ipynb  n04_features_selected_train.ipynb  n04_models_tests.ipynb  n05_pipeline_pycaret.ipynb  n05_tunning.ipynb  n06_oos_tests.ipynb  n06_pipeline_pycaret.ipynb
ppm/: pipeline_tests.py
ppm/nodes/: __init__.py  cross_validation.py  feature_explainer.py  metrics_calculator.py  outliers_detection.py  plots.py  process_outputs.py  tunning_model.py
ppm/utils/: __init__.py  external_get_data.py  feature_process.py  readers.py
src/: pipeline_tests.py
