[tool.poetry]
name = "n01_project"
version = "0.1.0"
description = ""
authors = ["Manuel <ferreira.jr.ufpb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"
beautifulsoup4 = "^4.12.2"
selenium = "^4.10.0"
pycep-correios = "^5.2.0"
geopy = "^2.3.0"
simplekml = "^1.3.6"
pykml = "^0.2.0"
progress = "^1.6"
geocoder = "^1.38.1"
pgeocode = "^0.4.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
shap = "^0.41.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
