[tool.poetry]
name = "property-price-modelling"
version = "0.1.0"
description = "Property price modelling for an location"
authors = ["Manuel <ferreira.jr.ufpb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
kedro = "^0.18.10"
jupyter = "^1.0.0"
pandas = ">=1.3.0,<2.0.0"
geopandas = "^0.13.2"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
selenium = "^4.10.0"
tqdm = "^4.65.0"
geopy = "^2.3.0"
pgeocode = "^0.4.0"
llvmlite = "^0.40.1"
numba = "^0.57.1"
shap = "^0.41.0"
pyod = "^1.0.9"
kaleido = "0.2.1"
pycaret = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
